# DMPS

./: .gitignore  CMakeLists.txt  CMakeLists_BACKUP_454.txt  CMakeLists_BASE_454.txt  CMakeLists_LOCAL_454.txt  CMakeLists_REMOTE_454.txt  README.md  main.cpp
resources/: app.rc
src/DataSaveManager/: DataSaveManager.cpp  DataSaveManager.hpp
src/DataSaver/: IDataSaver.hpp  ImageDataSaver.cpp  ImageDataSaver.hpp  TabularDataSaver.cpp  TabularDataSaver.hpp  TextDataSaver.cpp  TextDataSaver.hpp
src/controller/: Controller.cpp  Controller.hpp
src/core/: DataType.hpp  ModuleError.hpp  ModuleExecutionResult.hpp  ModuleParameter.hpp  ModuleResult.hpp
src/data/: IData.hpp  ImageData.cpp  ImageData.hpp  TabularData.cpp  TextData.cpp  TextData.hpp  tabulardata.cpp  tabulardata.hpp
src/dataLoader/: IDataLoader.hpp  ImageDataLoader.cpp  ImageDataLoader.hpp  TabularDataLoader.cpp  TabularDataLoader.hpp  TextDataLoader.cpp  TextDataLoader.hpp
src/dataLoaderManager/: DataLoaderManager.cpp  DataLoaderManager.hpp
src/engine/: Engine.cpp  Engine.hpp  IEngine.hpp
src/module/: GrayScaleModule.cpp  GrayScaleModule.hpp  IModule.hpp  ImageAverageColorModule.cpp  ImageAverageColorModule.hpp  ImageBlurModule.cpp  ImageBlurModule.hpp  ImageBrightnessModule.cpp  ImageBrightnessModule.hpp  ImageColorHistogramModule.cpp  ImageColorHistogramModule.hpp  ImageFlipModule.cpp  ImageFlipModule.hpp  ImageGrayScaleModule.cpp  ImageGrayScaleModule.hpp  ImageInvertColorsModule.cpp  ImageInvertColorsModule.hpp  ImageResizeModule.cpp  ImageResizeModule.hpp  ImageRotateModule.cpp  ImageRotateModule.hpp  ImageSizeModule.cpp  ImageSizeModule.hpp  TabularCountModule.cpp  TabularCountModule.hpp  TabularDescribe.cpp  TabularDescribe.hpp  TabularDropEmptyRowsModule.cpp  TabularDropEmptyRowsModule.hpp  TabularFillMissingValuesModule.cpp  TabularFillMissingValuesModule.hpp  TabularFilterNumericColumnsModule.cpp  TabularFilterNumericColumnsModule.hpp  TabularIsNullModule.cpp  TabularIsNullModule.hpp  TabularMaxModule.cpp  TabularMaxModule.hpp  TabularMeanModule.cpp  TabularMeanModule.hpp  TabularMedianModule.cpp  (+39 more)
src/moduleManager/: ModuleManager.cpp  ModuleManager.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp
src/test/: test.cpp  testText.cpp
src/test_data/: sales.csv
src/ui/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/ui/dialogs/: ModuleConfigDialog.cpp  ModuleConfigDialog.ui  (+3 more)
(+15 files in other folders)
